[tool.poetry]
name = "area_unit_conversion"
version = "1.0"
description = "Module to convert unit of area from one system of units to another."
authors = ["Rafael Suarez <rafael.asg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rafaelsuarezg/area_unit_conversion"
repository = "https://github.com/rafaelsuarezg/area_unit_conversion"
keywords = ["convert", "area", "unit"]
include = [
    "LICENSE",
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
autopep8 = "^1.6.0"
tox = "^3.24.4"

[tool.poetry.scripts]
flake8-markdown = 'flake8_markdown:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
